# ragbench

./: .dockerignore  .gitignore  Dockerfile  README  README.md  gitignore  pyproject.toml  requirements.txt
configs/lexical/: fiqa_bm25_grid.yaml  scidocs_bm25_grid.yaml  trec_covid_bm25_grid.yaml
configs/semantic/: fiqa_bge.yaml  fiqa_e5.yaml  fiqa_sbert.yaml  scidocs_bge.yaml  scidocs_e5.yaml  scidocs_sbert.yaml  trec_covid_bge.yaml  trec_covid_bge_hf.yaml  trec_covid_e5.yaml  trec_covid_sbert.yaml
ragbench_cli/: __main__.py
results/: fiqa_bm25_grid.csv  fiqa_bm25_grid.json  scidocs_bm25_grid.csv  scidocs_bm25_grid.json  trec_covid_bm25_grid.csv  trec_covid_bm25_grid.json
retrieverbench/: data.py  eval.py  reporting.py
retrieverbench/embeddings/: hf_auto_encoder.py
retrieverbench/retrieval/: bi_encoder.py  bm25.py  dense.py
scripts/: run_bi_encoder.py  run_bm25_grid.py  run_dense.py
